feat: added menu to Header

--- a/src/blocks/auth/__link/auth__link.css
+++ b/src/blocks/auth/__link/auth__link.css
@@ -9,6 +9,11 @@
   text-align: center;
 
   color: #ffffff;
+
+  position: absolute;
+  width: 100%;
+  top: calc(100% - 2px);
+  left: 0;
 }
 
 .auth__link:hover {
