--- a/src/blocks/auth/__input/auth__input.css
+++ b/src/blocks/auth/__input/auth__input.css
@@ -16,8 +16,10 @@
 
   padding-bottom: 13px;
   border-bottom: 2px solid #ccc;
+}
 
-  margin: 30px 0 0;
+.auth__input:focus {
+  outline: none;
 }
 
 .auth__input:invalid {
