--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,15 +1,23 @@
 @import url(./__logo/header__logo.css);
+@import url(./__menu/header__menu.css);
+@import url(./__current-email/header__current-email.css);
+@import url(./__button/header__button.css);
+@import url(./__button/_logoff/header__button_logoff.css);
 
 .header {
   width: 100%;
   min-height: 74px;
   box-sizing: border-box;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  color: #fff;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 @media screen and (max-width: 700px) {
   .header {
     min-height: 56px;
   }
-
 }
