--- a/src/blocks/popup/__message/popup__message.css
+++ b/src/blocks/popup/__message/popup__message.css
@@ -1,13 +1,17 @@
-.auth__heading {
+.popup__message {
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  /* identical to box height */
-
   text-align: center;
+  color: #000000;
+  margin: 32px 0 0;
+}
 
-  color: #ffffff;
-  margin: 0 0 20px;
+@media screen and (max-width: 500px) {
+  .popup__heading {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
