--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -12,13 +12,16 @@
 @import url(./__image/popup__image.css);
 @import url(./__caption/popup__caption.css);
 
+@import url(./__tooltip/popup__tooltip.css);
+@import url(./__message/popup__message.css);
+
 .popup {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.9);
   z-index: 1;
 
   display: flex;
@@ -27,7 +30,5 @@
 
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s linear .4s, opacity .4s linear;
+  transition: visibility 0s linear 0.4s, opacity 0.4s linear;
 }
-
-
