--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,8 @@
 @import url(./__logo/header__logo.css);
 @import url(./__menu/header__menu.css);
 @import url(./__current-email/header__current-email.css);
-@import url(./__button/header__button.css);
-@import url(./__button/_logoff/header__button_logoff.css);
+@import url(./__link/header__link.css);
+@import url(./__link/_logoff/header__link_logoff.css);
 
 .header {
   width: 100%;
