feat: added signin with token, signoff

--- a/src/blocks/header/__menu/header__menu.css
+++ b/src/blocks/header/__menu/header__menu.css
@@ -1,5 +1,6 @@
 .header__menu {
   display: flex;
+  align-items: center;
   flex-flow: row nowrap;
 
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
